# SDL_Gravity_Box

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
inc/: entity.hpp  math.hpp  mplayer.hpp  renderwindow.hpp
res/img/: Sprite-0003.aseprite
src/: camera.cpp  entity.cpp  gameloop.cpp  glad.c  main.cpp  mplayer.cpp  renderwindow.cpp  shader.cpp  utils.cpp
src/imgui/backends/: imgui_impl_sdl2.cpp
src/inc/: camera.hpp  entity.hpp  gameloop.hpp  mplayer.hpp  renderwindow.hpp  shader.hpp  utils.hpp
src/inc/glad/: glad.h
src/inc/vertx/: EBO.hpp  VAO.hpp  VBO.hpp  shader.hpp
src/res/img/: Candengine.aseprite  gif.aseprite  pop22.aseprite  pop_full.aseprite
src/res/shaders/: colors.fs  colors.vs  frag_shader.fs  light_cube.vs  vertx_shader.vs
src/vertx/: EBO.cpp  VAO.cpp  VBO.cpp  shader.cpp
